app/src/test/resources/programs/invalid/foreign/same_name.exe
foreign fun get_zero() -> Int
foreign fun get_zero() -> Int

fun main() -> Int {
    get_zero() 
}